--- a/.github/workflows/scheduled-reservation.yml
+++ b/.github/workflows/scheduled-reservation.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   reserve:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     container:
       image: ghcr.io/musaprg/rarejobctl:latest
       env:
