--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -2,7 +2,7 @@ name: Build a container image
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,9 +10,16 @@ jobs:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v1
       - uses: docker/metadata-action@v3
-        id: meta
+        id: meta-binary
         with:
           images: ghcr.io/musaprg/rarejobctl
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+      - uses: docker/metadata-action@v3
+        id: meta-standalone
+        with:
+          images: ghcr.io/musaprg/rarejobctl-standalone
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -25,7 +32,16 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-binary.outputs.tags }}
+          labels: ${{ steps.meta-binary.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile-standalone
+          push: true
+          tags: ${{ steps.meta-standalone.outputs.tags }}
+          labels: ${{ steps.meta-standalone.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
