--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -12,21 +12,21 @@ jobs:
       - uses: docker/metadata-action@v5
         id: meta-binary
         with:
-          images: ghcr.io/musaprg/rarejobctl
+          images: ghcr.io/miscord-dev/rarejobctl
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
       - uses: docker/metadata-action@v5
         id: meta-standalone
         with:
-          images: ghcr.io/musaprg/rarejobctl-standalone
+          images: ghcr.io/miscord-dev/rarejobctl-standalone
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: musaprg
+          username: miscord-dev
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v6
         with:
